# algo-trading-2

./: .gitignore  README.md  config.json  main.py  pyproject.toml  run_multi_seed.py
backtesting/: backtest.py
exogenous_model/dataset/: generate_dataset.py
exogenous_model/dataset/external_source/: evz_loader.py
exogenous_model/eval/: evaluate_model.py
exogenous_model/model/: core.py
exogenous_model/prediction/: prediction.py
exogenous_model/train/: train_model.py
exogenous_model/visualization/: plot_signals.py
meta_model/dataset/: generate_meta_dataset.py
meta_model/train_and_test/: train_test_meta_xgboost.py
model/: assets.py  price_generator.py  run_multi_seed.py  utils.py  visualizer.py
model/data/: generate_dataset.py
model/eval/: evaluate_model.py
model/train/: train_model.py
model/visualization/: plot_signals.py
strategy/: utils.py
